; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bna_enet.c_bna_enet_sm_stopped.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bna_enet.c_bna_enet_sm_stopped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bna_enet = type { i32 }

@bna_enet_sm_pause_init_wait = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bna_enet*, i32)* @bna_enet_sm_stopped to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bna_enet_sm_stopped(%struct.bna_enet* %0, i32 %1) #0 {
  %3 = alloca %struct.bna_enet*, align 8
  %4 = alloca i32, align 4
  store %struct.bna_enet* %0, %struct.bna_enet** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %21 [
    i32 129, label %6
    i32 128, label %10
    i32 132, label %13
    i32 130, label %14
    i32 131, label %17
    i32 133, label %20
  ]

6:                                                ; preds = %2
  %7 = load %struct.bna_enet*, %struct.bna_enet** %3, align 8
  %8 = load i32, i32* @bna_enet_sm_pause_init_wait, align 4
  %9 = call i32 @bfa_fsm_set_state(%struct.bna_enet* %7, i32 %8)
  br label %24

10:                                               ; preds = %2
  %11 = load %struct.bna_enet*, %struct.bna_enet** %3, align 8
  %12 = call i32 @call_enet_stop_cbfn(%struct.bna_enet* %11)
  br label %24

13:                                               ; preds = %2
  br label %24

14:                                               ; preds = %2
  %15 = load %struct.bna_enet*, %struct.bna_enet** %3, align 8
  %16 = call i32 @call_enet_pause_cbfn(%struct.bna_enet* %15)
  br label %24

17:                                               ; preds = %2
  %18 = load %struct.bna_enet*, %struct.bna_enet** %3, align 8
  %19 = call i32 @call_enet_mtu_cbfn(%struct.bna_enet* %18)
  br label %24

20:                                               ; preds = %2
  br label %24

21:                                               ; preds = %2
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @bfa_sm_fault(i32 %22)
  br label %24

24:                                               ; preds = %21, %20, %17, %14, %13, %10, %6
  ret void
}

declare dso_local i32 @bfa_fsm_set_state(%struct.bna_enet*, i32) #1

declare dso_local i32 @call_enet_stop_cbfn(%struct.bna_enet*) #1

declare dso_local i32 @call_enet_pause_cbfn(%struct.bna_enet*) #1

declare dso_local i32 @call_enet_mtu_cbfn(%struct.bna_enet*) #1

declare dso_local i32 @bfa_sm_fault(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
